Bug 1229743 part 1 - Simplify text decoration handling code with lambda function and range-based for loop. r=jfkthame

MozReview-Commit-ID: 4q2tetC74Ab